components/ua/messages/overlays/dev/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages-service
spec:
  template:
    spec:
      containers:
        - name: messages-service
          image: ghcr.io/isisbusapps/messages-service@
          ports:
            - containerPort: 4013
