components/ua/messages/overlays/dev/enable-debug-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messages-service
spec:
  ports:
    - name: debug
      protocol: TCP
      port: 4013
      targetPort: 4013
